@@ -1,3 +1,8 @@
+2013-10-09  Roland McGrath  <mcgrathr@google.com>
+
+	* elfxx-tilegx.c (tilegx32_plt_tail_entry, tilegx32_plt_tail_entry):
+	Move second const qualifier so it applies to the pointer.
+
 2013-10-05  Gregory Fong  <gregory.0xf0@gmail.com>
 
 	* elfxx-mips.c (mips_elf_create_got_section): Hide
